3rdParty/Nginx-Ingress/Azure/cert-manager-tls-ingress-nuance-asraas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-with-letsencrypt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt-asraas
spec:
  ingressClassName: nginx-asraas
  tls:
  - hosts:
    - nginx-asraas.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: nginx-asraas.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: krypton-router
            port:
              number: 8090
